force-app/main/default/objects/Account/fields/Upsell_Tier_Opps_Open__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Tier_Opps_Open__c</fullName>
    <description>Indicates the types of Tier Upsell opportunities that are Open.</description>
    <inlineHelpText>Indicates the types of Tier Upsell opportunities that are Open.</inlineHelpText>
    <label>Upsell Tier Opps Open</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employer of Record</fullName>
            </value>
            <value>
                <fullName>Employer of Record and Tier Upsell</fullName>
            </value>
            <value>
                <fullName>Tier Upsell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>