force-app/main/default/objects/Account/fields/UR_No_Of_Open_Cases__c.field-meta.xml
<CustomField>
    <fullName>UR_No_Of_Open_Cases__c</fullName>
    <label>UR No Of Open Cases</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>