force-app/main/default/objects/Account/fields/Utilization_Type__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Type__c</fullName>
    <description>Created for Ardius.</description>
    <label>Utilization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payroll Offset</fullName>
            </value>
            <value>
                <fullName>Liability Offset</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Carryforward</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>