force-app/main/default/objects/Account/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <description>To capture UUID</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>UUID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>