force-app/main/default/objects/Account/fields/Vitalfew_Pass__c.field-meta.xml
<CustomField>
    <fullName>Vitalfew_Pass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vitalfew Pass</label>
    <type>Checkbox</type>
</CustomField>