force-app/main/default/objects/Account/fields/ZP_Company_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>ZP_Company_Approval_Status__c</fullName>
    <inlineHelpText>Api</inlineHelpText>
    <label>Company Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Request for Information</fullName>
            </value>
            <value>
                <fullName>Rejected for Bank Errors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>