force-app/main/default/objects/Account/fields/ZP_Company_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>ZP_Company_Create_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Created Date</label>
    <type>Date</type>
</CustomField>