force-app/main/default/objects/Account/fields/ZP_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>ZP_Company_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Company ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>