force-app/main/default/objects/Account/fields/ZP_Company_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>ZP_Company_Lead_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Lead ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>