force-app/main/default/objects/Account/fields/ZP_Company_Suspension_Date__c.field-meta.xml
<CustomField>
    <fullName>ZP_Company_Suspension_Date__c</fullName>
    <description>api</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>api</inlineHelpText>
    <label>Company Suspension Date</label>
    <type>Date</type>
</CustomField>