force-app/main/default/objects/Account/fields/ZP_Lead_Campaign__c.field-meta.xml
<CustomField>
    <fullName>ZP_Lead_Campaign__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Campaign</label>
    <type>TextArea</type>
</CustomField>