force-app/main/default/objects/Account/fields/ZP_User__c.field-meta.xml
<CustomField>
    <fullName>ZP_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ZP User</label>
    <referenceTo>ZP_User__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>