force-app/main/default/objects/Account/recordTypes/BizDev.recordType-meta.xml
<RecordType>
    <fullName>BizDev</fullName>
    <active>true</active>
    <description>Used to identify in-app partners that are connected to extend Gusto functionality. (i.e. Time Tracking, Geofencing, time clocks, schedule management, etc.)</description>
    <label>BizDev</label>
</RecordType>