force-app/main/default/objects/Account/recordTypes/Reseller.recordType-meta.xml
<RecordType>
    <fullName>Reseller</fullName>
    <active>true</active>
    <description>Used to identify entities that help sell Gusto to other companies or their own clients. Generally associated with the Accountants segment, though not all Resellers are truly Accountants/CPAs</description>
    <label>Reseller</label>
</RecordType>