force-app/main/default/objects/Account/validationRules/Company_accounts_cannot_have_Firm_Id.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_accounts_cannot_have_Firm_Id</fullName>
    <active>true</active>
    <description>Validation to prevent company accounts from having Firm Id</description>
    <errorConditionFormula>RecordType.Name = &apos;Company&apos; &amp;&amp;  NOT(ISBLANK(ZP_Firm_ID__c)) &amp;&amp; NOT(ISNEW())</errorConditionFormula>
    <errorMessage>Company account cannot have Accounting Firm Id</errorMessage>
</ValidationRule>