force-app/main/default/objects/Account/validationRules/Direct_Require_Competitor.validationRule-meta.xml
<ValidationRule>
    <fullName>Direct_Require_Competitor</fullName>
    <active>true</active>
    <description>Excludes Administrators</description>
    <errorConditionFormula>AND( 
  ISPICKVAL(Qualified_Status_Detail__c, &apos;Chose Competitor&apos;), 
  ISBLANK(TEXT(Previous_Payroll_Provider__c)), 
  RecordType.Name = &apos;Company&apos;,
  NOT($User.Exempt_from_Validation_Rules__c)   
)</errorConditionFormula>
    <errorMessage>&apos;Competitor&apos; is required</errorMessage>
</ValidationRule>