force-app/main/default/objects/Account/validationRules/Firm_Inactive_Reason_for_not_Moving_Cl.validationRule-meta.xml
<ValidationRule>
    <fullName>Firm_Inactive_Reason_for_not_Moving_Cl</fullName>
    <active>true</active>
    <description>Please select at least one reason this firm is not moving clients if they are Inactive.</description>
    <errorConditionFormula>AND(
   ISPICKVAL( Partner_Detailed_Status__c , &quot;No Response / Not Interested in Gusto&quot;) , 
  ISBLANK(Reason_for_Not_Moving_Clients__c),
  NOT($User.Exempt_from_Validation_Rules__c) 
)</errorConditionFormula>
    <errorDisplayField>Reason_for_Not_Moving_Clients__c</errorDisplayField>
    <errorMessage>Please select at least one reason this firm is not moving clients if there is no response or client is not interested in gusto.</errorMessage>
</ValidationRule>