force-app/main/default/objects/Account/validationRules/HI_Closed_Lost_Requires_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>HI_Closed_Lost_Requires_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>and(HI_Closed_Lost__c = true,  ISBLANK(TEXT(HI_Closed_Lost_Detail__c )))</errorConditionFormula>
    <errorDisplayField>HI_Closed_Lost__c</errorDisplayField>
    <errorMessage>You must enter a reason when this field is checked</errorMessage>
</ValidationRule>