force-app/main/default/objects/Account/validationRules/HI_Owner_Change_To_Sales_Routing.validationRule-meta.xml
<ValidationRule>
    <fullName>HI_Owner_Change_To_Sales_Routing</fullName>
    <active>true</active>
    <description>Temporary validation rule that will fire when any one updates HI owner to Sales Routing.</description>
    <errorConditionFormula>ISCHANGED(HI_Owner__c) &amp;&amp;
HI_Owner__c = &apos;0058Y000009wXHM&apos; &amp;&amp; 
CONTAINS($Label.Benefits_Roles , $UserRole.Name)</errorConditionFormula>
    <errorDisplayField>HI_Owner__c</errorDisplayField>
    <errorMessage>HI owner cannot be changed to Sales Routing</errorMessage>
</ValidationRule>