force-app/main/default/objects/Account/validationRules/Lock_active_employees.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_active_employees</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(EE_Active_Count_Panda__c) &amp;&amp;
NOT($User.Exempt_from_Validation_Rules__c)
&amp;&amp;  NOT(contains($User.Username ,&apos;heroku@gusto.com&apos;))
&amp;&amp;  NOT(contains($User.Username ,&apos;heroku2@gusto.com&apos;))</errorConditionFormula>
    <errorDisplayField>EE_Active_Count_Panda__c</errorDisplayField>
    <errorMessage>Active employees is restricted from editing.</errorMessage>
</ValidationRule>