force-app/main/default/objects/Account/validationRules/Negative_active_employees.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_active_employees</fullName>
    <active>true</active>
    <errorConditionFormula>EE_Active_Count_Panda__c != null &amp;&amp; EE_Active_Count_Panda__c &lt; 0</errorConditionFormula>
    <errorDisplayField>EE_Active_Count_Panda__c</errorDisplayField>
    <errorMessage>Active employees can never be less than 0.</errorMessage>
</ValidationRule>