force-app/main/default/objects/Account/validationRules/Negative_discount.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_discount</fullName>
    <active>true</active>
    <description>Discount cannot be negative.</description>
    <errorConditionFormula>Discount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Discount__c</errorDisplayField>
    <errorMessage>Discount cannot be negative.</errorMessage>
</ValidationRule>