force-app/main/default/objects/Account/validationRules/Restrict_ownership_change_to_Integration.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_ownership_change_to_Integration</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED(OwnerId)
&amp;&amp;
(
RecordType.Name = &apos;Company&apos;
||
RecordType.Name = &apos;Reseller&apos;
)
&amp;&amp;
NOT(CONTAINS($Label.Integration_Users, PRIORVALUE(OwnerId)))
&amp;&amp;
CONTAINS($Label.Integration_Users,OwnerId)</errorConditionFormula>
    <errorMessage>Account ownership cannot be moved to Integration user</errorMessage>
</ValidationRule>